fix: right align mobile archive tags in time view

--- a/Blog-Main/themes/minima/source/css/custom.css
+++ b/Blog-Main/themes/minima/source/css/custom.css
@@ -1619,13 +1619,13 @@ body.darkmode .pagination a:active {
   }
 
   .archive-item-tags {
-    margin-left: 0;
-    text-align: left;
+    margin-left: auto;
+    text-align: right;
     white-space: normal;
   }
 
   .archive-item-tags .tag-link {
-    margin: 0 0.45rem 0.35rem 0;
+    margin: 0 0 0.35rem 0.45rem;
   }
 }
 
